# ai-shell

./: README.md  check.py  pyproject.toml
src/ai_shell/: __init__.py
src/ai_shell/cmd/: __init__.py  _config.py  _message.py  _provider.py  _session.py  cli.py  main.py
src/ai_shell/common/: conf.py  shell.py  table.py  utils.py
src/ai_shell/core/: ai.py  ai_actions.py  message.py  session.py  shell.py  shell_driver.py  tools.py
src/ai_shell/core/tools/: common.py  mysql.py  shell.py  sqlite.py
tests/: test_agent.py  test_conf.py  test_execute_sql.py  test_mysql.py  test_utils.py
