[project]
name = "ai-shell"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "BytemanD", email = "byteman.d@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "openai>=2.26.0",
    "pystonic",
    "rich>=14.3.3",
]

[project.scripts]
ai-shell = "ai_shell.cmd.main:cli"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
pystonic = { url = "https://test-files.pythonhosted.org/packages/d1/13/871615a76376463810d6231a69ecd3e93ae0d4d04b687cc09791f23f8d19/pystonic-0.1.2-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
