[project]
name = "ai-shell"
version = "0.1.3"
description = "AI 智能终端工具 - 将自然语言转换为可执行的终端命令"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "shell", "cli", "llm", "command", "terminal"]
authors = [{ name = "BytemanD", email = "byteman.d@outlook.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.3.1",
    "openai>=2.26.0",
    "pystonic>=0.1.2",
    "rich>=14.3.3",
]

[project.scripts]
ai-shell = "ai_shell.cmd.main:cli"

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "ruff>=0.15.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_shell"]


[tool.uv.sources]
pystonic = { url = "https://test-files.pythonhosted.org/packages/d1/13/871615a76376463810d6231a69ecd3e93ae0d4d04b687cc09791f23f8d19/pystonic-0.1.2-py3-none-any.whl" }

[[tool.uv.index]]
name = "tencent"
url = "http://mirrors.cloud.tencent.com/pypi/simple"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy/"
